ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-examples
spec:
  rules:
  - host: "foo.bar.com"
    http:
      paths:
      - path: "/bar"
        pathType: Prefix
        backend:
          service:
            name: python-service
            port:
              number: 80
